[package]
name = "itoaaa"
version = "0.1.1"
edition = "2024"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
description = "Print integers to target buffer in decimal format, fast."
license = "MIT"
repository = "https://github.com/WuBingzheng/itoaaa"
documentation = "https://docs.rs/itoaaa"
keywords = ["integer"]
categories = ["value-formatting", "no-std", "no-std::no-alloc"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]

[dev-dependencies]
itoa = "1.0"
itoap = {version="1.0"}
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
